se aumenta la pagina de productos-teja

--- a/asesoria.html
+++ b/asesoria.html
@@ -19,7 +19,7 @@
     <header id="header">
       <nav id="header_navbar">
         <div class="header_navbar--logo">
-          <a href="/index.html"><span>logo</span></a>
+          <a href="/index.html"><span></span></a>
         </div>
 
         <!-- <div>
