--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header id="header">
       <nav id="header_navbar">
         <div class="header_navbar--logo">
-          <a href="/index.html"><span>logo</span></a>
+          <a href="/index.html"><span></span></a>
         </div>
 
         <!-- <div>
@@ -37,10 +37,10 @@
     </header>
     
     <main>
-      <picture class="pop-up--window">
+      <!-- <picture class="pop-up--window">
         <span class="pop-up--close">X</span>
         <img src="/img/ventana emergentepng.png" alt="">
-      </picture>
+      </picture> -->
 
       <section class="main_slider">
         <ul>
