--- a/products.html
+++ b/products.html
@@ -19,7 +19,7 @@
     <header id="header">
       <nav id="header_navbar">
         <div class="header_navbar--logo">
-          <a href="/index.html"><span>logo</span></a>
+          <a href="/index.html"><span></span></a>
         </div>
 
         <!-- <div>
@@ -46,8 +46,8 @@
       <section class="products-list">
         <article class="products_list--cubiertas">
             <h2>Cubiertas</h2>
-            <img src="/img/teja.jpg" alt="" class="products_list--cubiertas">
-            <a href="">Ver productos</a>
+            <img src="/img/tejapvc.webp" alt="" class="products_list--cubiertas">
+            <a href="/productsTeja.html">Ver productos</a>
         </article>
 
         <article class="products_list--gypsum">
