se incluye  dos productos de ajover

--- a/productsTeja.html
+++ b/productsTeja.html
@@ -94,13 +94,22 @@
       </section>
 
       <section class="main_teja--ajover">
-        <div class="main_eternit--ajover">
+        <div class="main_teja--ajoverContainer">
           <a href="/products.html"><h1>Cubiertas ajover</h1></a>
-          <span class="icon_teja--years"></span>
-          <span class="icon_teja--asbesto"></span>
+          <span class="icon1_ajover"></span>
+          <span class="icon2_ajover"></span>
+          <span class="icon3_ajover"></span>
         </div>
           <div class="teja_ajover--container">
-            <article></article>
+              <article>
+                <h2>Ajonit</h2>
+                <img src="/img/products_teja/ajonit.png" alt="ajonit_ajover">
+              </article>
+              <article>
+                <h2>Ajozinc</h2>
+                <img src="/img/products_teja/azonic.png" alt="ajonit_ajover">
+              </article>
+            </article>
           </div>
       </section>
 
