Se modifico los estilos del header y footer

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coemsa.com</title>
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="/css/productsStyle.css">
+    <!-- <link rel="stylesheet" href="/css/productsStyle.css">
     <link rel="stylesheet" href="/css/locationStyle.css">
-    <link rel="stylesheet" href="/css/asesoria.css">
+    <link rel="stylesheet" href="/css/asesoria.css"> -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,17 +21,10 @@
         <div class="header_navbar--logo">
           <a href="/index.html"><span></span></a>
         </div>
-
-        <!-- <div>
-
-        </div> -->
-
         <div class="header_navbar--optionsList inactive">
           <a href="/products.html" class="inactive">Productos</a>
           <a href="/location.html" class="inactive">Ubicación</a>
           <a href="/asesoria.html" class="inactive">Asesoria</a>
-        </div>
-
         </div>
       </nav>
     </header>
@@ -79,7 +72,7 @@
         </article>
       </section>
 
-    <footer id="footer">
+    <footer>
       <span class="footer--logo">logo 50px</span>
       
       <div class="footer_information">
