se incorpora productos de teja y uno  de gypsum

--- a/productsTeja.html
+++ b/productsTeja.html
@@ -100,17 +100,30 @@
           <span class="icon2_ajover"></span>
           <span class="icon3_ajover"></span>
         </div>
-          <div class="teja_ajover--container">
-              <article>
-                <h2>Ajonit</h2>
-                <img src="/img/products_teja/ajonit.png" alt="ajonit_ajover">
-              </article>
-              <article>
-                <h2>Ajozinc</h2>
-                <img src="/img/products_teja/azonic.png" alt="ajonit_ajover">
-              </article>
+
+        <div class="teja_ajover--container">
+            <article>
+              <h2>Ajonit</h2>
+              <img src="/img/products_teja/ajonit.png" alt="ajonit_ajover">
             </article>
-          </div>
+            <article>
+              <h2>Ajozinc</h2>
+              <img src="/img/products_teja/azonic.png" alt="ajozin_ajover">
+            </article>
+            <article>
+              <h2>Ajonit PVC</h2>
+              <img src="/img/products_teja/ajoni_PVC.png" alt="ajonit_ajover">
+            </article>
+            <article>
+              <h2>Trapezoidal</h2>
+              <img src="/img/products_teja/TRAPEZOIDAL.png" alt="ajonit_ajover">
+            </article>
+            <article>
+              <h2>Ajozinc PVC</h2>
+              <img src="/img/products_teja/AJOZIN_PVC.png" alt="ajonit_ajover">
+            </article>
+          </article>
+        </div>
       </section>
 
       <section class="main_teja--coemsa">
