--- a/products.html
+++ b/products.html
@@ -53,7 +53,7 @@
         <article class="products_list--gypsum">
             <h2>Gypsum</h2>
             <img src="/img/gypsum.jpg" alt="" class="products_list--gypsum">
-            <a href="">Ver productos</a>
+            <a href="/productsGypsum.html">Ver productos</a>
         </article>
 
         <article class="products_list--estructurasMetalicas">
