cambios en location, header, y media query del home

--- a/location.html
+++ b/location.html
@@ -40,33 +40,37 @@
     <main>
 
       <section class="main_location--headerImg">
-      <p>insertar imagen o video</p>
+        <picture>
+          <img src="/img/location/img location.jpg" alt="">
+        </picture>
+
+        <article class="main_location--information">
+          <div class="location_information--map">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.871149073941!2d-78.62796218255615!3d-1.2484867000000022!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91d38196e01c2973%3A0x299cb233ea92cac2!2sAv.%20Pichincha%20%26%20Av.%20de%20los%20Incas%2C%20Ambato%20180202!5e0!3m2!1ses!2sec!4v1656449950348!5m2!1ses!2sec" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+
+          <div class="location_information--directions">
+              <h2>Encuéntranos en:</h2>
+              <article>
+                  <h3>Oficina matriz (Ambato)</h3>
+                  <p>Av. Pichincha y los incas (esq)</p>
+                  <p>Teléfono: 095 890 0097</p>
+              </article>
+
+              <article>
+                  <h3>Sucrusal: Puyo</h3>
+                  <p>Km 2 1/2 vía 10 de Agosto</p>
+              </article>
+
+              <article>
+                  <h3>Sucrusal: Palora</h3>
+                  <p>Av. Cumandá</p>
+              </article>
+          </div>
+        </article>
       </section>
 
-      <section class="main_location--information">
-        <div class="location_information--map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.871149073941!2d-78.62796218255615!3d-1.2484867000000022!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91d38196e01c2973%3A0x299cb233ea92cac2!2sAv.%20Pichincha%20%26%20Av.%20de%20los%20Incas%2C%20Ambato%20180202!5e0!3m2!1ses!2sec!4v1656449950348!5m2!1ses!2sec" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-
-        <div class="location_information--directions">
-            <h2>Encuéntranos en:</h2>
-            <article>
-                <h3>Oficina matriz (Ambato)</h3>
-                <p>Av. Los incas y pichincha (esq)</p>
-                <p>Teléfono: 095 890 0097</p>
-            </article>
-
-            <article>
-                <h3>Sucrusal: Puyo</h3>
-                <p>Av. 10 de Agosto</p>
-            </article>
-
-            <article>
-                <h3>Sucrusal: Palora</h3>
-                <p>Av. ?</p>
-            </article>
-        </div>
-      </section>
+      
     
     <footer id="footer">
       <span class="footer--logo">logo 50px</span>
