se inserta imagenes de productos y asesoria

--- a/asesoria.html
+++ b/asesoria.html
@@ -38,7 +38,7 @@
     
     <main>
       <section class="main_asesoria--headerImg">
-    <p>insertar imagen o video</p>
+        <span class="asesoria-img"></span>
       </section>
     
       <section class="main_asesoria--information">
