--- a/products.html
+++ b/products.html
@@ -38,8 +38,8 @@
     </header>
     
     <main>
-      <section class="main-products">
-        <p>colocar imagen</p>
+      <section class="main_products--video">
+        <video src="/video/products_video.mp4" controls></video>
         <img src="" alt="">
       </section>
 
