se inserta imagenes en el home, pendiente arreglar los estilos

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
           <h2>Encuentra todo para tu construcción</h2>
 
           <div class="main_trending--pictures">
-            <img src="/img/teja.jpg" alt="">
-            <img src="/img/gypsum.jpg" alt="">
-            <img src="/img/estructurasMetalicas.jpg" alt="">
+            <span class="trending_img1"></span>
+            <span class="trending_img2"></span>
+            <span class="trending_img3"></span>
           </div>
         </article>
       </section>
